--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Upload Example</title>
-    <script src="https://unpkg.com/htmx.org/dist/htmx.min.js"></script>
+    <script src="{{url_for('static', filename='/js/htmx.min.js')}}"></script>
+    <link rel="stylesheet" href="{{url_for('static', filename='/css/pico.classless.css')}}" />
 </head>
 <body>
-    <h1>File Upload Example</h1>
-    <form hx-post="/upload" hx-trigger="submit" enctype="multipart/form-data">
-        <label for="file">Select a file:</label>
-        <input type="file" id="file" name="file" required>
-        <button type="submit">Upload</button>
-    </form>
-    <div id="result" hx-swap="outerHTML">
-        {% if result %}
-            <p>{{ result }}</p>
-        {% endif %}
-    </div>
+    <header>
+        <h1>Sudoku Solver</h1>
+    </header>
+    <main>
+        <form hx-post="/upload" hx-trigger="submit" enctype="multipart/form-data">
+            <label for="file">Select a file:</label>
+            <input type="file" id="file" name="file" required>
+            <button type="submit">Upload</button>
+        </form>
+        <section id="result" hx-swap="outerHTML"></div>
+    </main>
+    <footer>
+        Created by Satwik Satpathy
+    </footer>
 </body>
 </html>
