--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>File Upload Example</title>
+    <title>Sudoku Solver</title>
     <script src="{{url_for('static', filename='/js/htmx.min.js')}}"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='/css/pico.classless.css')}}" />
 </head>
