--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         <section id="result" hx-swap="outerHTML"></div>
     </main>
     <footer>
-        Created by Satwik Satpathy
+        Created by Satwik Satpathy & Devi Prasad
     </footer>
 </body>
 </html>
