--- a/templates/index.html
+++ b/templates/index.html
@@ -9,16 +9,35 @@
     <link rel="stylesheet" href="{{url_for('static', filename='/css/pico.classless.css')}}" />
 </head>
 <body>
+    <script>
+        function updateProgress(value){
+            htmx.find('#progress').setAttribute('value', value);
+            if( value <= 95 )
+                setTimeout( updateProgress, 100, value+1 )
+        }
+    </script>
     <header>
         <h1>Sudoku Solver</h1>
     </header>
     <main>
-        <form hx-post="/upload" hx-trigger="submit" enctype="multipart/form-data">
+        <form 
+            id="form" 
+            hx-post="/upload" 
+            hx-target="#result" 
+            hx-trigger="submit" 
+            enctype="multipart/form-data"
+        >
             <label for="file">Select a file:</label>
             <input type="file" id="file" name="file" required>
-            <button type="submit">Upload</button>
+            <button 
+                id="submit"
+                type="submit" 
+                hx-on:click="setTimeout( updateProgress, 100, 0 );" >
+                Upload
+            </button>
+            <progress id='progress' value='0' max='100'></progress>
         </form>
-        <section id="result" hx-swap="outerHTML"></div>
+        <section id="result"></div>
     </main>
     <footer>
         Created by Satwik Satpathy & Devi Prasad Panda
