Reduce width size to look better

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
             hx-trigger="submit" 
             hx-indicator="#indicator" 
             enctype="multipart/form-data"
+            style="width: 50%;"
         >
             <fieldset role="group">
                 <label for="file">Select a file:</label>
